@@ -1,3 +1,7 @@
+2026-02-14  Robby Stephenson  <robby@periapsis.org>
+
+	* Updated Dark Horse data source.
+
 2026-02-12  Robby Stephenson  <robby@periapsis.org>
 
 	* Updated Springer Nature data source.
